--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   </head>
 
   <body class="page">
+
     <!--ЗАГОЛОВОК-->
 
     <header class="header">
       <img
         class="logo logo_place_header"
-        src="images/logo_place_header.svg"
+        src="./images/logo_place_header.svg"
         alt="Логотип."
-      >
+      />
 
       <h1 class="header__title">Научиться учиться</h1>
 
@@ -29,18 +30,18 @@
 
       <img
         class="header__main-illustration"
-        src="images/two_again.png"
+        src="./images/two_again.png"
         alt="Опять двойка."
-      >
+      />
 
       <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
+
       <!--ОПИСАНИЕ-->
 
       <section class="description">
-
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
 
@@ -79,9 +80,9 @@
           <li class="cards__item">
             <img
               class="cards__image"
-              src="images/cards-attention.png"
+              src="./images/cards-attention.png"
               alt="Два вида внимания."
-            >
+            />
 
             <h3 class="cards__title">Два вида внимания</h3>
 
@@ -94,9 +95,9 @@
           <li class="cards__item">
             <img
               class="cards__image"
-              src="images/cards-recall.png"
+              src="./images/cards-recall.png"
               alt="Помни."
-            >
+            />
 
             <h3 class="cards__title">Recall</h3>
 
@@ -109,9 +110,9 @@
           <li class="cards__item">
             <img
               class="cards__image"
-              src="images/cards-interliving.png"
+              src="./images/cards-interliving.png"
               alt="Интерливинг."
-            >
+            />
 
             <h3 class="cards__title">Интерливинг</h3>
 
@@ -123,9 +124,9 @@
           <li class="cards__item">
             <img
               class="cards__image"
-              src="images/cards-question.png"
+              src="./images/cards-question.png"
               alt="Вопросы."
-            >
+            />
 
             <h3 class="cards__title">Вопросы</h3>
 
@@ -138,9 +139,9 @@
           <li class="cards__item">
             <img
               class="cards__image"
-              src="images/cards-competence.png"
+              src="./images/cards-competence.png"
               alt="Иллюзия комепетентности."
-            >
+            />
 
             <h3 class="cards__title">Иллюзия комепетентности</h3>
 
@@ -155,54 +156,51 @@
       <!--ВИДЕО-->
 
       <section class="video">
-
         <h2 class="section-title">Видео на TED</h2>
 
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
 
         <ul class="video__iframes">
-
           <li class="video__iframe">
-
-            <iframe id="ytplayer" type="text/html" width="515" height="316"
-                    src="https://www.youtube.com/embed/5MgBikgcWnY"
-                    frameborder="0" allowfullscreen>
-                    Видео №1
+            <iframe
+              width="515"
+              height="316"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              frameborder="0"
+              allowfullscreen
+            >
             </iframe>
-
           </li>
 
           <li class="video__iframe">
-
-            <iframe id="ytplayer" type="text/html" width="515" height="316"
-                    src="https://www.youtube.com/embed/arj7oStGLkU"
-                    frameborder="0" allowfullscreen>
-                    Видео №2
+            <iframe
+              width="515"
+              height="316"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              frameborder="0"
+              allowfullscreen
+            >
             </iframe>
-
           </li>
-
         </ul>
-
       </section>
 
       <!--ОАКЛИ-->
 
       <section class="oakley">
-
         <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
 
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               С детства Барбаре не давалась математика. Она считала себя
-              законченным гуманитарием, причём далеко не самым умным. В
-              армии она изучала русский язык, чтобы получить надбавку, да
-              так успешно, что её выдвинули в командиры. Но для продвижения
-              по службе нужно было сдавать математику. И тогда Барбара
-              придумала свой подход к точным наукам. Оказалось, если вам
-              что-то «плохо даётся», ваши добытые трудом знания гораздо
-              глубже, чем у тех, кому всё ясно с первого взгляда.
+              законченным гуманитарием, причём далеко не самым умным. В армии
+              она изучала русский язык, чтобы получить надбавку, да так успешно,
+              что её выдвинули в командиры. Но для продвижения по службе нужно
+              было сдавать математику. И тогда Барбара придумала свой подход к
+              точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с
+              первого взгляда.
             </p>
           </div>
         </div>
@@ -211,7 +209,6 @@
       <!--МЕТОД ФЕЙМАНА-->
 
       <section class="feynman">
-
         <h2 class="feynman__title">Метод Феймана</h2>
 
         <h3 class="feynman__subtitle">Выучить и не забыть</h3>
@@ -222,8 +219,7 @@
           class="feynman__img"
           src="./images/feynman.png"
           alt="Метод Фейнмана."
-        >
-
+        />
       </section>
 
       <!--ЦИФРЫ-->
@@ -299,20 +295,17 @@
       -->
 
       <section class="khan">
-
         <div class="khan__container">
-
           <p class="khan__autor">Салман Хан</p>
 
           <h2 class="khan__title">Весь мир - школа</h2>
 
           <p class="khan__quote">
-            Страсть и новаторство Сала Хана меняют процесс
-            обучения миллионов студентов по всему миру. Книгу
-            «Весь мир — школа» нужно прочитать всем, кто
-            занимается образованием — так учащиеся повсюду
-            смогут получить навыки и знания, которые приносят
-            успех в школе, карьере и жизни.
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+            студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+            всем, кто занимается образованием — так учащиеся повсюду смогут
+            получить навыки и знания, которые приносят успех в школе, карьере и
+            жизни.
           </p>
 
           <p class="khan__quote-autor">Джордж Лукас</p>
@@ -320,29 +313,25 @@
           <p class="khan__quote-autor-subline">Кинорежиссёр, продюссер</p>
 
           <div class="khan__book-container">
-
             <img
               class="khan__book-pic"
               src="./images/khan-book.jpg"
-              alt="Книга Салмана Хана.">
+              alt="Книга Салмана Хана."
+            />
 
             <a class="khan__buy-link" href="#">Купить книгу →</a>
-
           </div>
-
         </div>
-
       </section>
 
       <!--КАУФМАН-->
 
       <section class="kaufman">
-
         <img
           class="kaufman__triangle rotation"
           src="./images/kaufman-triangle.svg"
           alt="Треугольник."
-        >
+        />
         <h2 class="section-title section-title_theme_dark">
           Принципы обучения
         </h2>
@@ -447,33 +436,33 @@
           <a href="#">
             <img
               class="resources__logo"
-              src="images/logo/resources-arzamas.svg"
+              src="./images/logo/resources-arzamas.svg"
               alt="Арзамас."
-            >
+            />
           </a>
 
           <a href="#">
             <img
               class="resources__logo"
-              src="images/logo/resources-n1.svg"
+              src="./images/logo/resources-n1.svg"
               alt="Н+1."
-            >
+            />
           </a>
 
           <a href="#">
             <img
               class="resources__logo"
-              src="images/logo/resources-strelka.svg"
+              src="./images/logo/resources-strelka.svg"
               alt="Стрелка."
-            >
+            />
           </a>
 
           <a href="#">
             <img
               class="resources__logo"
-              src="images/logo/resources-polka.svg"
+              src="./images/logo/resources-polka.svg"
               alt="Полка."
-            >
+            />
           </a>
         </div>
       </section>
@@ -486,9 +475,9 @@
         <div class="footer__column footer__column_content_copyright">
           <img
             class="logo logo_place_footer"
-            src="images/logo_place_footer.svg"
+            src="./images/logo_place_footer.svg"
             alt="Логотип"
-          >
+          />
 
           <p class="footer__autor">© Виктор Абанькин</p>
         </div>
@@ -496,15 +485,13 @@
         <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О практикуме</h4>
 
-          <giv class="footer__column-links">
-
+          <div class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
 
             <a class="footer__column-link" href="#">Концепции</a>
 
             <a class="footer__column-link" href="#">Наставники</a>
-
-          </giv>
+          </div>
         </nav>
 
         <nav class="footer__column footer__column_content_social">
@@ -514,9 +501,9 @@
             <a class="footer__column-link" href="#">
               <img
                 class="footer__social-icon"
-                src="images/facebook_color_white.svg"
+                src="./images/facebook_color_white.svg"
                 alt="Facebook."
-              >
+              />
 
               Facebook
             </a>
@@ -524,9 +511,9 @@
             <a class="footer__column-link" href="#">
               <img
                 class="footer__social-icon"
-                src="images/vk_color_white.svg"
+                src="./images/vk_color_white.svg"
                 alt="Вконтакте."
-              >
+              />
 
               ВКонтакте
             </a>
@@ -534,9 +521,9 @@
             <a class="footer__column-link" href="#">
               <img
                 class="footer__social-icon"
-                src="images/instagram_color_white.svg"
+                src="./images/instagram_color_white.svg"
                 alt="Instagram."
-              >
+              />
 
               Instagram
             </a>
