исправлено согласно второму ревью

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   </head>
 
   <body class="page">
-
     <!--ЗАГОЛОВОК-->
 
     <header class="header">
@@ -25,7 +24,7 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете
         использовать в своей жизни?
-        <a class="header__link" href="#">Узнать →</a>
+        <a class="header__link" href="#" target="_blank">Узнать →</a>
       </p>
 
       <img
@@ -38,7 +37,6 @@
     </header>
 
     <main class="content">
-
       <!--ОПИСАНИЕ-->
 
       <section class="description">
@@ -163,10 +161,8 @@
         <ul class="video__iframes">
           <li class="video__iframe">
             <iframe
-              width="515"
-              height="316"
+              class="video__iframe"
               src="https://www.youtube.com/embed/5MgBikgcWnY"
-              frameborder="0"
               allowfullscreen
             >
             </iframe>
@@ -174,10 +170,8 @@
 
           <li class="video__iframe">
             <iframe
-              width="515"
-              height="316"
+              class="video__iframe"
               src="https://www.youtube.com/embed/arj7oStGLkU"
-              frameborder="0"
               allowfullscreen
             >
             </iframe>
@@ -211,9 +205,9 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Феймана</h2>
 
-        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
 
-        <a class="feynman__link" href="#">Подробнее →</a>
+        <a class="feynman__link" href="#" target="_blank">Подробнее →</a>
 
         <img
           class="feynman__img"
@@ -300,13 +294,13 @@
 
           <h2 class="khan__title">Весь мир - школа</h2>
 
-          <p class="khan__quote">
+          <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов
             студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
             всем, кто занимается образованием — так учащиеся повсюду смогут
             получить навыки и знания, которые приносят успех в школе, карьере и
             жизни.
-          </p>
+          </blockquote>
 
           <p class="khan__quote-autor">Джордж Лукас</p>
 
@@ -319,7 +313,9 @@
               alt="Книга Салмана Хана."
             />
 
-            <a class="khan__buy-link" href="#">Купить книгу →</a>
+            <a class="khan__buy-link" href="#" target="_blank"
+              >Купить книгу →</a
+            >
           </div>
         </div>
       </section>
@@ -327,11 +323,8 @@
       <!--КАУФМАН-->
 
       <section class="kaufman">
-        <img
-          class="kaufman__triangle rotation"
-          src="./images/kaufman-triangle.svg"
-          alt="Треугольник."
-        />
+        <div class="kaufman__triangle rotation"></div>
+
         <h2 class="section-title section-title_theme_dark">
           Принципы обучения
         </h2>
@@ -433,7 +426,7 @@
         </p>
 
         <div class="resources__logo-zone">
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               class="resources__logo"
               src="./images/logo/resources-arzamas.svg"
@@ -441,7 +434,7 @@
             />
           </a>
 
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               class="resources__logo"
               src="./images/logo/resources-n1.svg"
@@ -449,7 +442,7 @@
             />
           </a>
 
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               class="resources__logo"
               src="./images/logo/resources-strelka.svg"
@@ -457,7 +450,7 @@
             />
           </a>
 
-          <a href="#">
+          <a href="#" target="_blank">
             <img
               class="resources__logo"
               src="./images/logo/resources-polka.svg"
@@ -486,11 +479,15 @@
           <h4 class="footer__column-heading">О практикуме</h4>
 
           <div class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#" target="_blank">Главная</a>
 
-            <a class="footer__column-link" href="#">Концепции</a>
+            <a class="footer__column-link" href="#" target="_blank"
+              >Концепции</a
+            >
 
-            <a class="footer__column-link" href="#">Наставники</a>
+            <a class="footer__column-link" href="#" target="_blank"
+              >Наставники</a
+            >
           </div>
         </nav>
 
@@ -498,7 +495,7 @@
           <h4 class="footer__column-heading">Соцсети</h4>
 
           <div class="footer__column-links">
-            <a class="footer__column-link" href="#">
+            <a class="footer__column-link" href="#" target="_blank">
               <img
                 class="footer__social-icon"
                 src="./images/facebook_color_white.svg"
@@ -508,7 +505,7 @@
               Facebook
             </a>
 
-            <a class="footer__column-link" href="#">
+            <a class="footer__column-link" href="#" target="_blank">
               <img
                 class="footer__social-icon"
                 src="./images/vk_color_white.svg"
@@ -518,7 +515,7 @@
               ВКонтакте
             </a>
 
-            <a class="footer__column-link" href="#">
+            <a class="footer__column-link" href="#" target="_blank">
               <img
                 class="footer__social-icon"
                 src="./images/instagram_color_white.svg"
