--- a/index.html
+++ b/index.html
@@ -158,25 +158,23 @@
 
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
 
-        <ul class="video__iframes">
-          <li class="video__iframe">
-            <iframe
-              class="video__iframe"
-              src="https://www.youtube.com/embed/5MgBikgcWnY"
-              allowfullscreen
-            >
-            </iframe>
-          </li>
+        <!--На вебинарах говорили, что нельзя придумывать свои классы-->
 
-          <li class="video__iframe">
-            <iframe
-              class="video__iframe"
-              src="https://www.youtube.com/embed/arj7oStGLkU"
-              allowfullscreen
-            >
-            </iframe>
-          </li>
-        </ul>
+        <div class="video__iframes">
+          <iframe
+            class="video__iframe"
+            src="https://www.youtube.com/embed/5MgBikgcWnY"
+            allowfullscreen
+          >
+          </iframe>
+
+          <iframe
+            class="video__iframe"
+            src="https://www.youtube.com/embed/arj7oStGLkU"
+            allowfullscreen
+          >
+          </iframe>
+        </div>
       </section>
 
       <!--ОАКЛИ-->
